--- a/backup/index.html
+++ b/backup/index.html
@@ -7,7 +7,7 @@
             <div class="card shadow">
                 <div class="NEW">
                     <div class="card-body p-5 ">
-                        <h1 class="card-title text-center mb-4">Welcome to SAMVAAD-X</h1>
+                        <h1 class="card-title text-center mb-4">Welcome to MeetSync</h1>
                         
                         <p class="lead text-center mb-4">
                             A secure meeting platform with screen sharing, whiteboard, and recording capabilities.
@@ -122,7 +122,7 @@
 
 <footer class="footer mt-5 mb-4 text-center text-muted">
     <div class="container">
-        <p>© 2025 SAMVAAD-X - All rights reserved</p>
+        <p>© 2025 MeetSync - All rights reserved</p>
     </div>
 </footer>
 {% endblock %}
